--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -91,6 +91,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="reg_buyer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reg_buyer.Designer.cs">
+      <DependentUpon>reg_buyer.cs</DependentUpon>
+    </Compile>
     <Compile Include="tablepeople.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="reg_buyer.resx">
+      <DependentUpon>reg_buyer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="tablepeople.resx">
       <DependentUpon>tablepeople.cs</DependentUpon>
     </EmbeddedResource>
